[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/SoundSettings.gd" type="Script" id=1]

[node name="SoundSettings" type="GridContainer"]
margin_top = 56.0
margin_right = 450.0
margin_bottom = 168.0
columns = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="."]
margin_top = 8.0
margin_right = 41.0
margin_bottom = 24.0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="."]
margin_left = 49.0
margin_right = 413.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="MasterValue" type="Label" parent="."]
margin_left = 421.0
margin_top = 8.0
margin_right = 450.0
margin_bottom = 24.0
text = "100%"

[node name="MusicLabel" type="Label" parent="."]
margin_top = 48.0
margin_right = 41.0
margin_bottom = 64.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 49.0
margin_top = 40.0
margin_right = 413.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="MusicValue" type="Label" parent="."]
margin_left = 421.0
margin_top = 48.0
margin_right = 450.0
margin_bottom = 64.0
text = "100%"

[node name="SoundsLabel" type="Label" parent="."]
margin_top = 88.0
margin_right = 41.0
margin_bottom = 104.0
text = "Sounds"

[node name="SoundSlider" type="HSlider" parent="."]
margin_left = 49.0
margin_top = 80.0
margin_right = 413.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="SoundValue" type="Label" parent="."]
margin_left = 421.0
margin_top = 88.0
margin_right = 450.0
margin_bottom = 104.0
text = "100%"
